add Restaurant model
